--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+chromedriver==2.24.1
 click==6.7
 Flask==0.12.2
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
 pkg-resources==0.0.0
+selenium==3.4.3
 Werkzeug==0.12.2
+WTForms==2.1
