--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,57 @@
-chromedriver==2.24.1
-click==6.7
-Flask==0.12.2
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-pkg-resources==0.0.0
-selenium==3.4.3
-Werkzeug==0.12.2
-WTForms==2.1
+ass==0.4.2
+astroid==1.4.9
+backports.functools-lru-cache==1.3
+blinker==1.3
+CDDB==1.4
+chardet==2.3.0
+colorama==0.3.7
+cryptography==1.3.1
+cssselect==0.9.1
+decorator==4.0.6
+deepin-menu==0.1
+deepin-utils==1.0
+Django==1.8.17
+django-crispy-forms==1.6.1
+django-registration-redux==1.4
+dtk==1.0.3
+enum34==1.1.5
+idna==2.1
+ipaddress==1.0.16
+isort==4.2.5
+javascriptcore==0.3
+lazy-object-proxy==1.2.2
+lxml==3.6.0
+Magic-file-extensions==0.2
+mutagen==1.31
+numpy==1.11.0
+oauthlib==1.0.3
+pathlib==1.0.1
+pbr==3.1.1
+peewee==2.8.0
+Pillow==3.2.0
+psutil==4.1.0
+pyasn1==0.1.9
+pycrypto==2.6.1
+pycurl==7.43.0
+pygobject==3.20.1
+PyJWT==1.4.0
+pylint==1.6.5
+PyOpenGL==3.0.2
+pyparted==3.10.7
+pyquery==1.2.9
+pysmbc==1.0.15.5
+pysrt==1.0.1
+python3-xlib==0.15
+requests==2.9.1
+requests-oauthlib==0.4.0
+scipy==0.17.0
+six==1.10.0
+stevedore==1.24.0
+urllib3==1.13.1
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.2
+WebOb==1.6.0
+wrapt==1.9.0
+xpybutil==0.0.1
+youtube-dl==2017.3.2
